# crossify

./: .gitignore  .pre-commit-config.yaml  IDEAS.md  README.md  STRATEGY.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
crossify/: __init__.py  __main__.py  cli.py  crossings.py  intersections.py  io.py  opensidewalks.py  split_sidewalks.py  validators.py
crossify/cross/: __init__.py  adjust_crossings.py  helpers.py  make_crossings.py
crossings.geojson/: crossings.dbf  crossings.shp  crossings.shx
tests/: .gitignore
