[tool.poetry]
name = "crossify"
version = "0.1.4"
description = "Generate street crossing lines, either from OpenStreetMap or using a file of sidewalk lines"
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
crossify = "crossify.__main__:crossify"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0.0"
geopandas = "^0.3.0"
numpy = "^1.12.1"
osmnx = "0.6"
overpass = "^0.5.6"
shapely = "^1.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
